[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/SupportScenes/UI/Inventory/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/SupportScenes/UI/Inventory/Inventory.gd" type="Script" id=3]
[ext_resource path="res://Assets/ui/square_background.png" type="Texture" id=4]
[ext_resource path="res://Assets/items/items_8x8.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Resources/ColorGear.gdshader" type="Shader" id=6]
[ext_resource path="res://Assets/ui/button.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Resources/Roboto.ttf" type="DynamicFontData" id=8]


[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 271, 271 )
modulate_color = Color( 1, 1, 1, 0.478431 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 6 )
shader_param/line_color = Color( 0, 0, 0, 1 )
shader_param/line_thickness = 0.4
shader_param/glow_thickness = 4.0
shader_param/glow_color = Color( 0, 0, 0, 0 )
shader_param/helmetTextureActive = false
shader_param/bodyTextureActive = false
shader_param/swordTextureActive = false
shader_param/bowTextureActive = false
shader_param/staffTextureActive = false
shader_param/staffGemTextureActive = false
shader_param/helmetDarkOrigin = null
shader_param/helmetDarkNew = null
shader_param/helmetMediumOrigin = null
shader_param/helmetMediumNew = null
shader_param/helmetLightOrigin = null
shader_param/helmetLightNew = null
shader_param/bodyDarkOrigin = null
shader_param/bodyDarkNew = null
shader_param/bodyMediumOrigin = null
shader_param/bodyMediumNew = null
shader_param/bodyLightOrigin = null
shader_param/bodyLightNew = null
shader_param/bandOrigin = null
shader_param/bandNew = null
shader_param/buckleOrigin = null
shader_param/buckleNew = null
shader_param/bowOrigin = null
shader_param/bowNew = null
shader_param/arrowLightOrigin = null
shader_param/arrowLightNew = null
shader_param/arrowDarkOrigin = null
shader_param/arrowDarkNew = null
shader_param/bladeHiltOrigin = null
shader_param/bladeHiltNew = null
shader_param/bladeOrigin = null
shader_param/bladeNew = null
shader_param/staffOrigin = null
shader_param/staffNew = null
shader_param/staffGemOrigin = null
shader_param/staffGemNew = null

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 1111, 10, 10 )

[sub_resource type="DynamicFont" id=15]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=16]
Label/fonts/font = SubResource( 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 120, 220, 10, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 120, 230, 10, 10 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.270588 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 80, 220, 10, 10 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 80, 230, 10, 10 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 271, 104 )
modulate_color = Color( 1, 1, 1, 0.478431 )

[sub_resource type="Animation" id=13]
resource_name = "DeInspectItem"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("InspectItem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "HideInventory"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 325, 290 ), Vector2( 325, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackpackContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 694, 0 ), Vector2( 800, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LootContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -111, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "InspectItem"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("InspectItem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 325, 381 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackpackContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 800, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InspectItem:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LootContainer:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -111, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ShowInventory"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 325, 400 ), Vector2( 325, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackpackContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 0 ), Vector2( 694, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LootContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -111, 0 ), Vector2( 0, 0 ) ]
}

[node name="Inventory" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="CloseInventory" type="TextureButton" parent="."]
visible = false
margin_right = 800.0
margin_bottom = 360.0
rect_min_size = Vector2( 400, 180 )
expand = true

[node name="InspectItem" type="PanelContainer" parent="."]
visible = false
margin_left = 300.0
margin_top = 53.0
margin_right = 504.0
margin_bottom = 276.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="InspectItem"]
margin_right = 204.0
margin_bottom = 223.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="InspectItem/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 196.0
margin_bottom = 215.0

[node name="ItemName" type="Label" parent="InspectItem/MarginContainer/VBoxContainer"]
margin_right = 188.0
margin_bottom = 19.0
text = "Item Name"
align = 1

[node name="ItemSpriteContainer" type="HBoxContainer" parent="InspectItem/MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 188.0
margin_bottom = 53.0
rect_min_size = Vector2( 30, 30 )
alignment = 1

[node name="ItemSprite" type="TextureRect" parent="InspectItem/MarginContainer/VBoxContainer/ItemSpriteContainer"]
material = SubResource( 12 )
margin_left = 79.0
margin_right = 109.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 11 )
expand = true
stretch_mode = 5

[node name="ItemDescription" type="Label" parent="InspectItem/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 188.0
margin_bottom = 98.0
text = "Item Description
"
align = 1
autowrap = true

[node name="ItemStats" type="VBoxContainer" parent="InspectItem/MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 188.0
margin_bottom = 148.0

[node name="Tier" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats"]
margin_right = 188.0
margin_bottom = 19.0
text = "Tier: 0"
align = 1

[node name="Damage" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats"]
margin_top = 23.0
margin_right = 188.0
margin_bottom = 42.0
text = "Damage: 0-1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats"]
margin_top = 46.0
margin_right = 188.0
margin_bottom = 46.0
alignment = 1

[node name="Stats1" type="VBoxContainer" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer"]
margin_left = 92.0
margin_right = 92.0
theme = SubResource( 16 )

[node name="Health" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer/Stats1"]
visible = false
margin_right = 81.0
margin_bottom = 17.0
text = "Health: +1"
align = 1

[node name="Defense" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer/Stats1"]
visible = false
margin_right = 81.0
margin_bottom = 17.0
text = "Defense: +1"
align = 1

[node name="Dexterity" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer/Stats1"]
visible = false
margin_right = 81.0
margin_bottom = 17.0
text = "Dexterity: +1"
align = 1

[node name="Stats2" type="VBoxContainer" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer"]
margin_left = 96.0
margin_right = 96.0
theme = SubResource( 16 )

[node name="Attack" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer/Stats2"]
visible = false
margin_right = 69.0
margin_bottom = 17.0
text = "Attack: +1"
align = 1

[node name="Speed" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer/Stats2"]
visible = false
margin_right = 69.0
margin_bottom = 17.0
text = "Speed: +1"
align = 1

[node name="Vitality" type="Label" parent="InspectItem/MarginContainer/VBoxContainer/ItemStats/HBoxContainer/Stats2"]
visible = false
margin_right = 69.0
margin_bottom = 17.0
text = "Vitality: +1"
align = 1

[node name="BackpackContainer" type="HBoxContainer" parent="."]
margin_left = 800.0
margin_right = 910.0
margin_bottom = 364.0

[node name="CloseButton" type="TextureButton" parent="BackpackContainer"]
margin_right = 50.0
margin_bottom = 364.0
rect_min_size = Vector2( 50, 50 )
texture_normal = SubResource( 6 )
texture_hover = SubResource( 7 )
expand = true
stretch_mode = 4

[node name="PanelContainer2" type="PanelContainer" parent="BackpackContainer"]
margin_left = 54.0
margin_right = 110.0
margin_bottom = 364.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="BackpackContainer/PanelContainer2"]
margin_right = 56.0
margin_bottom = 364.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ResizeContainer" type="VBoxContainer" parent="BackpackContainer/PanelContainer2/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 356.0

[node name="0" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_bottom = 40.0
rect_scale = Vector2( 1, 1 )

[node name="1" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 44.0
margin_bottom = 84.0
rect_scale = Vector2( 1, 1 )

[node name="2" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 88.0
margin_bottom = 128.0
rect_scale = Vector2( 1, 1 )

[node name="3" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 132.0
margin_bottom = 172.0
rect_scale = Vector2( 1, 1 )

[node name="4" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 176.0
margin_bottom = 216.0
rect_scale = Vector2( 1, 1 )

[node name="5" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 220.0
margin_bottom = 260.0
rect_scale = Vector2( 1, 1 )

[node name="6" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 264.0
margin_bottom = 304.0
rect_scale = Vector2( 1, 1 )

[node name="7" parent="BackpackContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 308.0
margin_bottom = 348.0
rect_scale = Vector2( 1, 1 )

[node name="LootContainer" type="HBoxContainer" parent="."]
margin_left = -111.0
margin_right = -1.0
margin_bottom = 364.0

[node name="PanelContainer2" type="PanelContainer" parent="LootContainer"]
margin_right = 56.0
margin_bottom = 364.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="LootContainer/PanelContainer2"]
margin_right = 56.0
margin_bottom = 364.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ResizeContainer" type="VBoxContainer" parent="LootContainer/PanelContainer2/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 356.0

[node name="0" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_bottom = 40.0
rect_scale = Vector2( 1, 1 )

[node name="1" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 44.0
margin_bottom = 84.0
rect_scale = Vector2( 1, 1 )

[node name="2" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 88.0
margin_bottom = 128.0
rect_scale = Vector2( 1, 1 )

[node name="3" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 132.0
margin_bottom = 172.0
rect_scale = Vector2( 1, 1 )

[node name="4" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 176.0
margin_bottom = 216.0
rect_scale = Vector2( 1, 1 )

[node name="5" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 220.0
margin_bottom = 260.0
rect_scale = Vector2( 1, 1 )

[node name="6" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 264.0
margin_bottom = 304.0
rect_scale = Vector2( 1, 1 )

[node name="7" parent="LootContainer/PanelContainer2/MarginContainer/ResizeContainer" instance=ExtResource( 1 )]
margin_top = 308.0
margin_bottom = 348.0
rect_scale = Vector2( 1, 1 )

[node name="CloseButton" type="TextureButton" parent="LootContainer"]
margin_left = 60.0
margin_right = 110.0
margin_bottom = 364.0
rect_min_size = Vector2( 50, 50 )
texture_normal = SubResource( 17 )
texture_hover = SubResource( 18 )
expand = true
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 325.0
margin_top = 381.0
margin_right = 477.0
margin_bottom = 437.0
custom_styles/panel = SubResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 152.0
margin_bottom = 56.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="GearContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 144.0
margin_bottom = 48.0
alignment = 1

[node name="0" parent="PanelContainer/MarginContainer/GearContainer" instance=ExtResource( 1 )]
margin_left = 4.0
margin_right = 44.0
margin_bottom = 40.0
rect_scale = Vector2( 1, 1 )

[node name="1" parent="PanelContainer/MarginContainer/GearContainer" instance=ExtResource( 1 )]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_scale = Vector2( 1, 1 )

[node name="2" parent="PanelContainer/MarginContainer/GearContainer" instance=ExtResource( 1 )]
margin_left = 92.0
margin_right = 132.0
margin_bottom = 40.0
rect_scale = Vector2( 1, 1 )

[node name="InventoryAnimations" type="AnimationPlayer" parent="."]
anims/DeInspectItem = SubResource( 13 )
anims/HideInventory = SubResource( 3 )
anims/InspectItem = SubResource( 10 )
anims/RESET = SubResource( 4 )
anims/ShowInventory = SubResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 400, 360 )
